--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,9 @@
 @import "tailwindcss";
 
+#storybook-root {
+  width: 100%;
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
